# intellij_vex_plugin

./: .gitattributes  .gitignore  CHANGELOG.md  Justfile  README.md  build.gradle.kts  gradle.properties  pyproject.toml  renovate.json  settings.gradle.kts
.github/workflows/: build.yml  qodana_code_quality.yml  release.yml
gradle/: libs.versions.toml
note/: ideal_bnf.md
src/main/grammar/: Vex.bnf  Vex.flex
src/main/resources/: type_inference_data.json  vex_api_dump.json
src/main/resources/fileTemplates/internal/: VexFile.vex.ft  VexFile.vfl.ft
src/main/resources/messages/: MyBundle.properties
src/main/resources/vex_help/functions/: Du.txt  Dv.txt  Dw.txt  __uniform_mul.txt  __uniform_premul.txt  _common.txt  _groups_en.ini  _imagefilter_variadic.txt  _space_args.txt  abspath.txt  accessframe.txt  addattrib.txt  adddetailattrib.txt  addpoint.txt  addpointattrib.txt  addprim.txt  addprimattrib.txt  addvariablename.txt  addvertex.txt  addvertexattrib.txt  addvisualizer.txt  agentaddclip.txt  agentchannelcount.txt  agentchannelnames.txt  agentchannelvalue.txt  agentchannelvalues.txt  agentclipcatalog.txt  agentclipchannel.txt  agentclipchannelnames.txt  agentcliplayerblend.txt  agentcliplayersamplelocal.txt  agentcliplayersampleworld.txt  agentcliplength.txt  agentclipnames.txt  agentclipsample.txt  agentclipsamplelocal.txt  agentclipsamplerate.txt  agentcliptimes.txt  (+723 more)
tests/: test_extract_geo_attrs.py  test_extract_vex_globals.py
tools/: detect_attr.py  extract_geo_attrs.py  extract_vex_globals.py  gen_context_bnf.py  merge_type_inference.py  vex_utils.py
(+110 files in other folders)
